--- a/index.html
+++ b/index.html
@@ -4,21 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PayPal Payment</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="smart-button-container">
-    <div style="text-align: center"><label for="description"> </label><input type="text" name="descriptionInput" id="description" maxlength="127" value=""></div>
+    <!-- <div style="text-align: center"><label for="description"> </label><input type="text" name="descriptionInput" id="description" maxlength="127" value=""></div>
       <p id="descriptionError" style="visibility: hidden; color:red; text-align: center;">Please enter a description</p>
     <div style="text-align: center"><label for="amount"> </label><input name="amountInput" type="number" id="amount" value="" ><span> USD</span></div>
-      <p id="priceLabelError" style="visibility: hidden; color:red; text-align: center;">Please enter a price</p>
+      <p id="priceLabelError" style="visibility: hidden; color:red; text-align: center;">Please enter a price</p> -->
     <div id="invoiceidDiv" style="text-align: center; display: none;"><label for="invoiceid"> </label><input name="invoiceid" maxlength="127" type="text" id="invoiceid" value="" ></div>
-      <p id="invoiceidError" style="visibility: hidden; color:red; text-align: center;">Please enter an Invoice ID</p>
-    <div style="text-align: center; margin-top: 0.625rem;" id="paypal-button-container"></div>
+      <!-- <p id="invoiceidError" style="visibility: hidden; color:red; text-align: center;">Please enter an Invoice ID</p> -->
+    <div style="text-align: center;" id="paypal-button-container"></div>
   </div>
   <script src="https://www.paypal.com/sdk/js?client-id=AQIMOyoRr75rPbtu37LCaHRa38Rj7rMqe3JlWo4_AJAv55k048WSbE0OHQPXZG6kyeE7LnXQx6x0DY8D&enable-funding=venmo&currency=USD" data-sdk-integration-source="button-factory"></script>
   <script>
   function initPayPalButton() {
-    var description = document.querySelector('#smart-button-container #description');
+    // var description = document.querySelector('#smart-button-container #description');
     // var amount = document.querySelector('#smart-button-container #amount');
     var descriptionError = document.querySelector('#smart-button-container #descriptionError');
     var priceError = document.querySelector('#smart-button-container #priceLabelError');
@@ -28,6 +29,7 @@
 
     const url = new URL(window.location.href);
     const amount = url.searchParams.get("amount");
+    const description = url.searchParams.get("description");
 
     var elArr = [description, amount];
 
