--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PayPal Payment</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="smart-button-container">
-      <div style="text-align: center;">
+      <div class="paypal-buttons" style="text-align: center;">
         <div id="paypal-button-container"></div>
       </div>
     </div>
