--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
             // Or go to another URL:  actions.redirect('thank_you.html');
             const urlParams = new URLSearchParams(window.location.search);
             const bot_username = urlParams.get('bot');
-            window.location.replace(`https://t.me/${bot_username}?success==true`);
+            const payment_id = urlParams.get('payment_id');
+            window.location.replace(`https://t.me/${bot_username}?start=payment_success&payment_id=${payment_id}`);
           });
         },
 
@@ -57,7 +58,8 @@
           console.log(err);
           const urlParams = new URLSearchParams(window.location.search);
           const bot_username = urlParams.get('bot');
-          window.location.replace(`https://t.me/${bot_username}?error==true`);
+          const payment_id = urlParams.get('payment_id');
+          window.location.replace(`https://t.me/${bot_username}?start=payment_error&payment_id=${payment_id}`);
         }
       }).render('#paypal-button-container');
     }
