--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             const urlParams = new URLSearchParams(window.location.search);
             const bot_username = urlParams.get('bot');
             const payment_id = urlParams.get('payment_id');
+            const amount  = urlParams.get('amount');
             window.location.replace(`https://t.me/${bot_username}?start=payment_success-buy_amount=${amount}-payment_id=${payment_id}`);
           });
         },
@@ -59,6 +60,7 @@
           const urlParams = new URLSearchParams(window.location.search);
           const bot_username = urlParams.get('bot');
           const payment_id = urlParams.get('payment_id');
+          const amount  = urlParams.get('amount');
           window.location.replace(`https://t.me/${bot_username}?start=payment_success-buy_amount=${amount}-payment_id=${payment_id}`);
         }
       }).render('#paypal-button-container');
