--- a/index.html
+++ b/index.html
@@ -51,7 +51,12 @@
             const bot_username = urlParams.get('bot');
             const payment_id = urlParams.get('payment_id');
             const amount  = urlParams.get('amount');
-            window.location.replace(`https://t.me/${bot_username}?start=payment_success-buy_amount=${amount}-payment_id=${payment_id}`);
+            
+            const CryptoJS = require("crypto-js");
+            let encrypted_payment = payment_id;
+            let decrypted_payment = CryptoJS.SHA256(encrypted_payment).toString();
+            
+            window.location.replace(`https://t.me/${bot_username}?start=payment_success-buy_amount=${amount}-payment_id=${decrypted_payment}`);
           });
         },
 
