--- a/index.html
+++ b/index.html
@@ -52,11 +52,10 @@
             const payment_id = urlParams.get('payment_id');
             const amount  = urlParams.get('amount');
             
-            const CryptoJS = require("crypto-js");
-            let encrypted_payment = payment_id;
-            let decrypted_payment = CryptoJS.SHA256(encrypted_payment).toString();
+            const crypto = require('crypto-js');
+            const encrypted_payment = crypto.SHA256(payment_id).toString();
             
-            window.location.replace(`https://t.me/${bot_username}?start=payment_success-buy_amount=${amount}-payment_id=${decrypted_payment}`);
+            window.location.replace(`https://t.me/${bot_username}?start=payment_success-buy_amount=${amount}-payment_id=${encrypted_payment}`);
           });
         },
 
