--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             const bot_username = urlParams.get('bot');
             const payment_id = urlParams.get('payment_id');
             const amount  = urlParams.get('amount');
-            window.location.replace(`https://t.me/${bot_username}?start=payment_success-buy_amount=${amount}-${payment_id}`);
+            window.location.replace(`https://t.me/${bot_username}?start=payment_success-buy_amount=${amount}-payment_id=${payment_id}`);
           });
         },
 
@@ -61,7 +61,7 @@
           const bot_username = urlParams.get('bot');
           const payment_id = urlParams.get('payment_id');
           const amount  = urlParams.get('amount');
-          window.location.replace(`https://t.me/${bot_username}?start=payment_success-buy_amount=${amount}-${payment_id}`);
+          window.location.replace(`https://t.me/${bot_username}?start=payment_success-buy_amount=${amount}-payment_id=${payment_id}`);
         }
       }).render('#paypal-button-container');
     }
